source/grammar/tests/invalid/statements/tokens.qasm
"#;"
"3x;"
"x@x;"
"3.4.3;"
"3.4e3e3;"
